--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/react-type-animation": "^1.1.1"
 	}
 }
