--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,9 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon dist/server.js",
+		"start": "nodemon dist/server.js",
 		"client": "npm start --prefix ../client",
-		"con": "concurrently \"nodemon dist/server.js\" \"npm run client\"",
+		"dev": "concurrently \"nodemon dist/server.js\" \"npm run client\"",
 		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"author": "Christian Alvites Sandoval",
